/* Translations */ sp <Earthling#66355>

--- a/wiki/Earthling.wikitext
+++ b/wiki/Earthling.wikitext
@@ -9,4 +9,4 @@
 
 ====Translations====
 *Russian: [[землянин]] ''m'', ''[[житель]] [[Земля|Земли]]'' ''m''
-*Spanish: [[terricola]]
+*Spanish: [[terr&iacute;cola]]
