/* Noun */ fmt <ski#41966>

--- a/wiki/ski.wikitext
+++ b/wiki/ski.wikitext
@@ -10,7 +10,7 @@
 *[[Spanish]]: [[esquiar]]
 
 === Noun ===
-'''ski''' (plural skis)
+'''ski''' (''plural'' '''skis''')
 
 #Pair of parallel elongated and flat footwear used for skiing.
 
