--- a/wiki/qui.wikitext
+++ b/wiki/qui.wikitext
@@ -1,3 +1,27 @@
+==French==
+===Interrogative pronoun===
+'''qui'''
+
+# [[who]], [[whom]]
+
+===Relative pronoun===
+'''qui'''
+
+# [[which]], [[that]]
+
+----
+
+==Italian==
+===Adverb===
+'''qui'''
+
+# [[here]]
+
+===Synonym===
+*[[qua]]
+
+----
+
 ==Latin==
 ===Relative pronoun===
 '''qu&#299;''' ''m'', '''quae''' ''f'', '''quod''' ''n''
