--- a/wiki/libertas.wikitext
+++ b/wiki/libertas.wikitext
@@ -33,3 +33,8 @@ Third declension (3).
 |style="background:#F5F5F5;"| <big> l&#299;bert&#257;te
 |style="background:#F5F5F5;"| <big> l&#299;bert&#257;tibus
 |}
+
+===Related terms===
+*[[libertà]]
+*[[liberté]]
+*[[liberty]]
