/* Noun */ trans <agriculture#52941>

--- a/wiki/agriculture.wikitext
+++ b/wiki/agriculture.wikitext
@@ -13,5 +13,11 @@ The art or science of cultivating the ground, including the harvesting of crops,
 *[[agricultural]]
 *[[agriculturist]]
 
+====Translations====
+*French: [[agriculture]] ''f''
+*German: [[Landwirtschaft]] ''f''
+*Italian: [[agricoltura]] ''f''
+*Spanish: [[agricultura]] ''f''
+
 ===Interwikimedia links===
 *[[Wikipedia]]: [[W:Agriculture|Agriculture]].
