+Latin +Spanish <agricultura#47298>

--- a/wiki/agricultura.wikitext
+++ b/wiki/agricultura.wikitext
@@ -1,6 +1,6 @@
 ----
 
-==[[Romanica]]==
+==[[Latin]], [[Romanica]] & [[Spanish]]==
 ===Noun===
 <b>agricultura ''f''</b>
 #[[agriculture]], [[farming]]
