/* Translations */ +Latin +Romanica <agriculture#52941>

--- a/wiki/agriculture.wikitext
+++ b/wiki/agriculture.wikitext
@@ -17,6 +17,8 @@ The art or science of cultivating the ground, including the harvesting of crops,
 *French: [[agriculture]] ''f''
 *German: [[Landwirtschaft]] ''f''
 *Italian: [[agricoltura]] ''f''
+*Latin: [[agricultura]] ''f''
+*Romanica: [[agricultura]] ''f''
 *Spanish: [[agricultura]] ''f''
 
 ===Interwikimedia links===
