--- a/wiki/agriculture.wikitext
+++ b/wiki/agriculture.wikitext
@@ -14,12 +14,28 @@ The art or science of cultivating the ground, including the harvesting of crops,
 *[[agriculturist]]
 
 ====Translations====
-*French: [[agriculture]] ''f''
+*Chinese: [[农业]] (nongye)
+*French: agriculture ''f''
 *German: [[Landwirtschaft]] ''f''
 *Italian: [[agricoltura]] ''f''
+*Japanese: [[農業]] (のうぎょう, nougyou)
 *Latin: [[agricultura]] ''f''
 *Romanica: [[agricultura]] ''f''
 *Spanish: [[agricultura]] ''f''
 
 ===Interwikimedia links===
 *[[Wikipedia]]: [[W:Agriculture|Agriculture]].
+
+----
+
+==French==
+===Noun===
+'''agriculture''' ''f''
+
+# agriculture
+
+===Related terms===
+*[[agricole]]
+*[[agriculteur]]
+*[[agro-]]
+*[[agronomie]]
