--- a/wiki/agricultura.wikitext
+++ b/wiki/agricultura.wikitext
@@ -1,6 +1,19 @@
+==Latin==
+===Noun===
+'''agricultura''' ''f'
+
+#[[agriculture]], [[farming]]
+
 ----
 
-==[[Latin]], [[Romanica]] & [[Spanish]]==
-===Noun===
-<b>agricultura ''f''</b>
+==[[Romanica]]==
+'''agricultura''' ''f'
+
+#[[agriculture]], [[farming]]
+
+----
+
+==Spanish==
+'''agricultura''' ''f'
+
 #[[agriculture]], [[farming]]
