--- a/wiki/agricultura.wikitext
+++ b/wiki/agricultura.wikitext
@@ -1,19 +1,21 @@
 ==Latin==
 ===Noun===
-'''agricultura''' ''f'
+'''agricultura''' ''f''
 
 #[[agriculture]], [[farming]]
 
 ----
 
 ==[[Romanica]]==
-'''agricultura''' ''f'
+===Noun===
+'''agricultura''' ''f''
 
 #[[agriculture]], [[farming]]
 
 ----
 
 ==Spanish==
-'''agricultura''' ''f'
+===Noun===
+'''agricultura''' ''f''
 
 #[[agriculture]], [[farming]]
