--- a/wiki/agriculture.wikitext
+++ b/wiki/agriculture.wikitext
@@ -1,11 +1,13 @@
 ==English==
+===Etymology===
+Latin ''agricultura'': ''[[ager]]'', field + ''[[cultura]]'', [[cultivation]]. See [[acre]], and [[culture]]
 === Pronunciation ===
 *SAMPA: /"{grI%kVltS@/
 ===Hyphenation===
 *ag-ri-cul-ture
 
 ===Noun===
-[[L.]] ''agricultura'': ''ager'', [[field]] + ''cultura'', [[cultivation]]. See [[acre]], and [[culture]]
+'''agriculture'''
 
 The art or science of cultivating the ground, including the harvesting of crops, and the rearing and management of live stock; tillage; husbandry; [[farm]]ing.
 
