--- a/wiki/aeroplane.wikitext
+++ b/wiki/aeroplane.wikitext
@@ -41,6 +41,7 @@ From Latin ''[[aero-]]'', combining form for '''air''' + plane, from Latin ''[[p
 *Portuguese: [[avião]] ''m'', [[aeroplano]] ''m''
 *Russian: [[самолёт]] ''m'', [[аэроплан]] ''m''
 *Slovak: [[lietadlo]] ''n'' (lietadlá ''pl'')
+*Spanish: [[avi&oacute;n]] ''m'', [[aeroplano]] ''m''
 *Swedish: [[flygplan]], [[flygmaskin]] (''older'')
 *Turkish: [[uçağın]]
 <!-- Please add translations also to AIRPLANE! -->
