--- a/wiki/aeroplane.wikitext
+++ b/wiki/aeroplane.wikitext
@@ -31,6 +31,7 @@ From Latin ''[[aero-]]'', combining form for '''air''' + plane, from Latin ''[[p
 *German: [[Flugzeug]] ''n''
 *Guarani: [[kurusu veve]]
 *[[Hebrew]]: [[מָטוֹס]] ''m'' [[אֲוִירוֹן]] ''m''
+*{{hu}}: [[repülőgép]] [[:hu:repülőgép|(hu)]]
 *[[Interlingua]]: [[avion]], [[aeroplano]]
 *Italian: [[aereo]] ''m''
 *Japanese: [[飛行機]] (ひこうき, hikōki), [[航空機]] (こうくうき, kōkuuki)
