--- a/wiki/vliegtuig.wikitext
+++ b/wiki/vliegtuig.wikitext
@@ -1,7 +1,8 @@
 ==Dutch==
+===Noun===
+vliegtuig
 
-[[airplane]] [[aircraft]]
+#[[aeroplane]], [[aircraft]]
 
 ===See also===
-
-[[snuffelvliegtuig]]
+*[[snuffelvliegtuig]]
