/* Translations */ +Spanish +German +Chinese <jam#39852>

--- a/wiki/jam.wikitext
+++ b/wiki/jam.wikitext
@@ -36,9 +36,12 @@
 *[[marmalade]]
 
 ====Translations====
+*Chinese: [[果酱]] (guojiang) (1)
 *Finnish: [[hillo]] (1), [[tukos]] (2), [[ruuhka]] (2), [[jamit]] (3, ''plural''), [[pinne#Finnish|pinne]]: [[olla]] pinteessä (5)
 *French: [[confiture]] ''f'' (1)
+*German: [[Marmelade]] ''f'' (1)
 *Italian: [[marmellata]] ''f'' (1)
+*Spanish: [[mermelada]] ''f'' (1)
 
 ===Verb===
 '''to jam''' ([[jammed]], jammed)
