remove auto-links in translation sections <ski#41966>

--- a/wiki/ski.wikitext
+++ b/wiki/ski.wikitext
@@ -6,7 +6,7 @@
 === Translations ===
 *[[Finnish]]: [[hiihtää]]
 *[[French]]: [[skier]]
-*[[German]]: [[Ski]] [[fahren]]
+*[[German]]: Ski [[fahren]]
 *[[Spanish]]: [[esquiar]]
 
 === Noun ===
@@ -16,6 +16,6 @@
 
 === Translations ===
 *[[Finnish]]: [[suksi]]
-*[[French]]: [[ski]] ''m''
-*[[German]]: [[Ski]] ''m''
+*[[French]]: ski ''m''
+*[[German]]: Ski ''m''
 *[[Spanish]]: [[esqu&iacute;]] ''m''
