--- a/wiki/dunny.wikitext
+++ b/wiki/dunny.wikitext
@@ -1,4 +1,3 @@
-==English (Australia)==
-
-==Noun==
-*Outdoor Toilet - by implication old, ramshackle
+{{-en-}}
+===Noun===
+#''Australia.'' Outdoor Toilet - by implication old, ramshackle
