--- a/wiki/jalousie.wikitext
+++ b/wiki/jalousie.wikitext
@@ -1,4 +1,12 @@
-In [[Naval Architecture]] a Jalousie is a component in a [[ventilation]] system. It is pronounced Ja- Lucy.
+==English==
+==Etymology===
+French
+===Pronunciation===
+*IPA: /ˈdʒæləsiː/
+===Noun===
+'''jalousie'''
+
+#In [[Naval Architecture]] a Jalousie is a component in a [[ventilation]] system.
 
 ----
 ==French==
