--- a/wiki/jalousie.wikitext
+++ b/wiki/jalousie.wikitext
@@ -1,5 +1,5 @@
 ==English==
-==Etymology===
+===Etymology===
 French
 ===Pronunciation===
 *IPA: /ˈdʒæləsiː/
@@ -9,6 +9,7 @@ French
 #In [[Naval Architecture]] a Jalousie is a component in a [[ventilation]] system.
 
 ----
+
 ==French==
 ===Noun===
 '''jalousie''' ''f''
