/* Noun */ Noun phrase. <electromagnetic radiation#66400>

--- a/wiki/electromagnetic_radiation.wikitext
+++ b/wiki/electromagnetic_radiation.wikitext
@@ -1,5 +1,5 @@
 ==English==
-===Noun===
+===Noun phrase===
 '''electromagnetic radiation''' (''[[uncountable]]'')
 
 #Radiation consisting of oscillating electric and magnetic fields in oriented perpendicularly to each other, moving through space.
