--- a/wiki/gymnosophy.wikitext
+++ b/wiki/gymnosophy.wikitext
@@ -1,1 +1,1 @@
-'''Gymnosophy''' is the wisdom or accululated knowledge and experience of the lifestyle of being nude. It encompasses naturism and nudism.
+'''Gymnosophy''' is the wisdom or accumulated knowledge and experience of the lifestyle of being nude. It encompasses naturism and nudism.
