/* Translations */ <coup d'état#47223>

--- a/wiki/coup_d%27%C3%A9tat.wikitext
+++ b/wiki/coup_d%27%C3%A9tat.wikitext
@@ -11,19 +11,20 @@ French, "stroke of state".
 *[[coup]], [[putsch]]
 
 ====Translations====
-*Chinese [[政變]], [[政变]]
-*Dutch: [[staatsgreep]]
-*French: coup d'état ''m''
-*German: [[Putsch]]
-*Greek: [[πραξικόπημα]] ''n'' (praxikópima)
-*Italian: [[colpo di stato]] ''m''
-*Japanese: [[クーデター]] (kūdetā)
-*Korean: [[불시의 일격]]
-*Latin: [[eversio reipublicae]] ''nominative singular'', [[eversionis reipublicae]] ''genitive singular'', [[eversiones rerumpublicarum]] ''nominative plural'', [[eversionum rerumpublicarum]]
+*[[Chinese]] (simplified): [[政变]]
+*Chinese (traditional): [[政變]]
+*[[Dutch]]: [[staatsgreep]]
+*[[French]]: coup d'état ''m''
+*[[German]]: [[Putsch]]
+*[[Greek]]: [[πραξικόπημα]] ''n'' (praxikópima)
+*[[Italian]]: [[colpo di stato]] ''m''
+*[[Japanese]]: [[クーデター]] (kūdetā)
+*[[Korean]]: [[불시의 일격]]
+*[[Latin]]: [[eversio reipublicae]] ''nominative singular'', [[eversionis reipublicae]] ''genitive singular'', [[eversiones rerumpublicarum]] ''nominative plural'', [[eversionum rerumpublicarum]]
 *Portuguese: [[golpe de estado]]
 *[[Romanica]]: [[colpo de stato]] ''m''
-*Spanish: [[golpe de estado]]
-*Swedish: [[Statskupp]]
+*[[Spanish]]: [[golpe de estado]]
+*[[Swedish]]: [[Statskupp]]
 
 ===See also===
 *[[w:Coup d'état|Wikipedia article on coups d'état]]
