/* Translations */  Added Russian translation <coup d'état#47223>

--- a/wiki/coup_d%27%C3%A9tat.wikitext
+++ b/wiki/coup_d%27%C3%A9tat.wikitext
@@ -23,6 +23,7 @@ French, "stroke of state".
 *[[Latin]]: [[eversio reipublicae]] ''nominative singular'', [[eversionis reipublicae]] ''genitive singular'', [[eversiones rerumpublicarum]] ''nominative plural'', [[eversionum rerumpublicarum]]
 *Portuguese: [[golpe de estado]]
 *[[Romanica]]: [[colpo de stato]] ''m''
+*[[Russian]]: [[Путч]]
 *[[Spanish]]: [[golpe de estado]]
 *[[Swedish]]: [[Statskupp]]
 
