/* Translations */  Added Polish translation <coup d'état#47223>

--- a/wiki/coup_d%27%C3%A9tat.wikitext
+++ b/wiki/coup_d%27%C3%A9tat.wikitext
@@ -21,7 +21,8 @@ French, "stroke of state".
 *[[Japanese]]: [[クーデター]] (kūdetā)
 *[[Korean]]: [[불시의 일격]]
 *[[Latin]]: [[eversio reipublicae]] ''nominative singular'', [[eversionis reipublicae]] ''genitive singular'', [[eversiones rerumpublicarum]] ''nominative plural'', [[eversionum rerumpublicarum]]
-*Portuguese: [[golpe de estado]]
+*[[Polish]]: [[Zamach stanu]]
+*[[Portuguese]]: [[golpe de estado]]
 *[[Romanica]]: [[colpo de stato]] ''m''
 *[[Russian]]: [[Путч]]
 *[[Spanish]]: [[golpe de estado]]
