--- a/wiki/aeroplane.wikitext
+++ b/wiki/aeroplane.wikitext
@@ -1,53 +1,6 @@
-<!--
-
-NOTE - If you make edits to this page, please also make corresponding edits to the page for "aeroplane".
-
--->
 ==English==
 ===Etymology===
 From Latin ''[[aero-]]'', combining form for '''air''' + plane, from Latin ''[[planum]]'', '''flat'''
-
-===Noun===
-'''aeroplane''' (''British'') (''plural'' '''aeroplanes''')
-
-====Variants====
-*[[airplane]] (''US'')
-
-# A powered [[aircraft]] with fixed [[wing]]s used for [[transportation]] of humans and goods; for [[amusement]] or [[entertainment]]; and in [[warfare]].
-
-====Short form====
-*[[plane]]
-
-====Translations====
-*Breton: [[karr-nij]] ''m'' kirri-nij ''pl'', [[nijerez]] ''f'' -ioù ''pl''
-*Chinese: [[飞机]]
-*Czech: [[letadlo]] ''n'' (letadla ''pl'')
-*Danish: [[flyvemaskine]]
-*Dutch: [[vliegtuig]] ''n''
-*Estonian: [[lennuk]]
-*Finnish: [[lentokone]]
-*French: [[avion]] ''m''
-*Frisian: [[fleantúch]] ''n'', [[fleanmasine]]
-*German: [[Flugzeug]] ''n''
-*Guarani: [[kurusu veve]]
-*[[Hebrew]]: [[מָטוֹס]] ''m'' [[אֲוִירוֹן]] ''m''
-*{{hu}}: [[repülőgép]] [[:hu:repülőgép|(hu)]]
-*[[Interlingua]]: [[avion]], [[aeroplano]]
-*Italian: [[aereo]] ''m''
-*Japanese: [[飛行機]] (ひこうき, hikōki), [[航空機]] (こうくうき, kōkuuki)
-*Latin: [[aeroplanum]]
-*Lithuanian: [[lėktuvas]] ''m'', [[aeroplanas]] ''m'' (archaic)
-*Persian: [[هَواپَيما]] (hævāpeymā)
-*Polish: [[samolot]]
-*Portuguese: [[avião]] ''m'', [[aeroplano]] ''m''
-*Russian: [[самолёт]] ''m'', [[аэроплан]] ''m''
-*Slovak: [[lietadlo]] ''n'' (lietadlá ''pl'')
-*Spanish: [[avi&oacute;n]] ''m'', [[aeroplano]] ''m''
-*Swedish: [[flygplan]], [[flygmaskin]] (''older'')
-*Turkish: [[uçağın]]
-<!-- Please add translations also to AIRPLANE! -->
-
-===See also===
-*[[aircraft]]
-*[[glider]]
-*[[helicopter]]
+{{Template:Aeroplane Airplane}}
+<!--To edit the rest of this page, you may go to http://en.wiktionary.org/w/wiki.phtml?title=Template:Aeroplane_Airplane&action=edit 
+-->
