/* Translations */  Added Danish translation <coup d'état#47223>

--- a/wiki/coup_d%27%C3%A9tat.wikitext
+++ b/wiki/coup_d%27%C3%A9tat.wikitext
@@ -13,6 +13,7 @@ French, "stroke of state".
 ====Translations====
 *[[Chinese]] (simplified): [[政变]]
 *Chinese (traditional): [[政變]]
+*[[Danish]]: [[Statskup]]
 *[[Dutch]]: [[staatsgreep]]
 *[[French]]: coup d'état ''m''
 *[[German]]: [[Putsch]]
