/* Translations */ <coup d'état#47223>

--- a/wiki/coup_d%27%C3%A9tat.wikitext
+++ b/wiki/coup_d%27%C3%A9tat.wikitext
@@ -21,7 +21,7 @@ French, "stroke of state".
 *[[Italian]]: [[colpo di stato]] ''m''
 *[[Japanese]]: [[クーデター]] (kūdetā)
 *[[Korean]]: [[불시의 일격]]
-*[[Latin]]: [[eversio reipublicae]] ''nominative singular'', [[eversionis reipublicae]] ''genitive singular'', [[eversiones rerumpublicarum]] ''nominative plural'', [[eversionum rerumpublicarum]]
+*[[Latin]]: [[eversio reipublicae]] ''nominative singular'', [[eversionis reipublicae]] ''genitive singular'', [[eversiones rerumpublicarum]] ''nominative plural'', [[eversionum rerumpublicarum]] ''genitive plural''
 *[[Polish]]: [[Zamach stanu]]
 *[[Portuguese]]: [[golpe de estado]]
 *[[Romanica]]: [[colpo de stato]] ''m''
