--- a/wiki/fledgling.wikitext
+++ b/wiki/fledgling.wikitext
@@ -1,3 +1,4 @@
-1. A young bird which has just developed its flight wings.
-
-2. New, naiive, or inexperienced; ''A "fledgling industry," or "fledgling businessman."''
+{{-en-}}
+===Noun===
+#A young bird which has just developed its flight wings.
+#New, naiive, or inexperienced; ''A "fledgling industry," or "fledgling businessman."''
