/* Derived terms */ <coup#49993>

--- a/wiki/coup.wikitext
+++ b/wiki/coup.wikitext
@@ -20,6 +20,7 @@
 
 ====Derived terms====
 *[[coup d'état#French|coup d'état]]
+*[[coup de grâce]]
 *[[coup de foudre]]
 *[[coup d'œil]]
 *[[coup de pied]]
