--- a/wiki/ira.wikitext
+++ b/wiki/ira.wikitext
@@ -1,28 +1,5 @@
-==Italian==
-===Noun===
-'''ira''' ''f''
+==English==
+===Abbreviation===
+'''IRA'''
 
-#[[ire]], [[anger]]
-
-===Related terms===
-*[[iracondo]]
-*[[irascibile]]
-*[[irato]]
-*[[iroso]]
-
-----
-
-==Latin==
-===Noun===
-'''īra, [[Wiktionary Appendix:Latin first declension|īrae]]''' ''f''
-
-#[[anger]]
-
-====Related terms====
-=====Latin=====
-*[[iracundus]]
-*[[irasci]]
-
-=====English=====
-*[[irate]]
-*[[ire]]
+# [[w:Irish Republican Army|Irish Republican Army]]
