--- a/wiki/sala.wikitext
+++ b/wiki/sala.wikitext
@@ -10,3 +10,8 @@ Germanic ''sala''
 ===Related terms===
 *[[saletta]]
 *[[salettina]]
+==Spanish==
+===Noun===
+# '''sala de estar''' [[living room]]
+# [[room]]
+# A large [[hall]]
