--- a/wiki/Earthwoman.wikitext
+++ b/wiki/Earthwoman.wikitext
@@ -1,1 +1,3 @@
-A female inhabitant of Earth. The feminine of Earthman. ([[Earthling]] is gender-neutral)
+{{-en-}}
+==Noun==
+#A female inhabitant of Earth. The feminine form of [[Earthman]], [[Earthling]].
