--- a/wiki/shrimp.wikitext
+++ b/wiki/shrimp.wikitext
@@ -1,5 +1,10 @@
+{{-en-}}
 ===Noun===
 '''shrimp'''<!-- plural shrimp, shrimps, or both?? -->
 
 ====Synonyms====
 *[[prawn]] (Aus)
+
+===Translation===
+*{{es}}: camarón ''m'', gamba ''f''
+{{wikipedia}}
