--- a/wiki/shrimp.wikitext
+++ b/wiki/shrimp.wikitext
@@ -2,9 +2,10 @@
 ===Noun===
 '''shrimp'''<!-- plural shrimp, shrimps, or both?? -->
 
+{{wikipedia}}
 ====Synonyms====
 *[[prawn]] (Aus)
 
 ===Translation===
-*{{es}}: camarón ''m'', gamba ''f''
-{{wikipedia}}
+*Italian: [[gameretto]]
+*{{es}}: [[camarón]] ''m'', [[gamba]] ''f''
