Related terms. <mindblindness#66060>

--- a/wiki/mindblindness.wikitext
+++ b/wiki/mindblindness.wikitext
@@ -1,3 +1,6 @@
 =={{En}}==
 ===Noun===
 # The inability to recognize and understand another person's mental state.
+
+====Related terms====
+*[[autism]]
