--- a/wiki/mente.wikitext
+++ b/wiki/mente.wikitext
@@ -11,7 +11,6 @@
 
 ===Verb form===
 '''mente'''
-
 # third-person singular indicative present of [[mentire]]
 
 ====Synonym====
@@ -19,3 +18,7 @@
 
 ===See also===
 *[[-mente]]
+==Spanish==
+===Noun===
+'''mente''' ''f''
+#[[Mente]]
