--- a/wiki/intellect.wikitext
+++ b/wiki/intellect.wikitext
@@ -1,3 +1,4 @@
+{{-en-}}
 ===Noun===
 '''intellect''' ''(countable and uncountable)'', plural '''[[intellects]]'''
 
@@ -14,3 +15,4 @@ From Latin '''[[intellectus]]''', perfect passive participle of '''[[intellegere
 ===Related Terms===
 *[[intellectual]]
 *[[intelligent]]
+*[[mind]]
