/* Noun */re-phrasing <surf rider#66473>

--- a/wiki/surf_rider.wikitext
+++ b/wiki/surf_rider.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''[[surf]] [[rider]]''' ([[surf riders]])
 
-# One who rides the [[surf]], an older term for a [[surfer]]
+#''Obsolete''. One who rides the [[surf]] usually on a [[surfboard]]; a [[surfer]]
 
 ====Synonyms====
 *[[surfer]]
