--- a/wiki/sala.wikitext
+++ b/wiki/sala.wikitext
@@ -10,8 +10,12 @@ Germanic ''sala''
 ===Related terms===
 *[[saletta]]
 *[[salettina]]
+
+----
+
 ==Spanish==
 ===Noun===
-# '''sala de estar''' [[living room]]
+
 # [[room]]
+#: ''sala de estar'' [[living room]]
 # A large [[hall]]
