shrimp and prawns are actually two different things, with different regional meanings :| <prawn#37902>

--- a/wiki/prawn.wikitext
+++ b/wiki/prawn.wikitext
@@ -1,5 +1,7 @@
+{{wikipedia}}
+==English==
 ===Noun===
-'''prawn''' (plural: [[prawns]])
-
-====Synonyms====
-*[[shrimp]] (US)<!-- what word is used in Britain? -->
+'''prawn''' (plural: '''prawns''')
+#(''US'') A large [[shrimp]].
+====Related====
+*shrimp
