+trans <surf riding#66546>

--- a/wiki/surf_riding.wikitext
+++ b/wiki/surf_riding.wikitext
@@ -12,5 +12,8 @@
 *[[surfboard]]
 *[[surfer]]
 
+====Translations====
+*[[Hawaiian]]: [[heʻe nalu]]
+
 ===See also===
 *[[w:Surfing|Wikipedia article on surfing]]
