--- a/wiki/surfing.wikitext
+++ b/wiki/surfing.wikitext
@@ -16,5 +16,8 @@
 *[[body surfing]]
 *[[wind surfing]]
 
+====Translations====
+*[[Hawaiian]]: [[heʻe nalu]]
+
 ===See also===
 *[[w:Surfing|Wikipedia article on surfing]]
