replaced copyright infring with wordnet def <agnosia#66065>

--- a/wiki/agnosia.wikitext
+++ b/wiki/agnosia.wikitext
@@ -1,7 +1,7 @@
+{{wikipedia}}
 =={{En}}==
 ===Noun===
-#  from the Greek meaning 'not knowing'. A failure in object recognition which is not due to a general intellectual impairment, sensory impairment or language disorder. Most usually applied to visual object agnosia, but note that other forms can exist (e.g. tactile agnosia, auditory agnosia).
-----
+#The inability to recognize objects by use of the senses.
 
 ==Italian==
 ===Noun===
