--- a/wiki/corda.wikitext
+++ b/wiki/corda.wikitext
@@ -1,3 +1,22 @@
+==Italian==
+===Noun===
+'''corda''' ''f''
+
+# [[rope]]
+
+===Related terms===
+*[[cordaccia]]
+*[[cordame]]
+*[[cordata]]
+*[[cordatrice]]
+*[[cordellina]]
+*[[cordicella]]
+*[[cordicina]]
+*[[cordina]]
+*[[cordone]]
+
+----
+
 ==Latin==
 ===Noun===
 '''corda''' ''n''
