the words "shrimp" and "prawn" are not related even though the creatures are <prawn#37902>

--- a/wiki/prawn.wikitext
+++ b/wiki/prawn.wikitext
@@ -1,7 +1,8 @@
-{{wikipedia}}
 ==English==
 ===Noun===
 '''prawn''' (plural: '''prawns''')
+
 #(''US'') A large [[shrimp]].
-====Related====
-*shrimp
+
+====Synonyms====
+*[[shrimp]]
