fmt; is this &trade; or &reg;? <Nike#33413>

--- a/wiki/Nike.wikitext
+++ b/wiki/Nike.wikitext
@@ -1,9 +1,9 @@
-===[[Pronunciation]]===
-*IPA: //
-*SAMPA: //
-===[[Etymology]]===
-Comes from the Greek word (&#957&#943&#954&#951) meaning ''victory''.
-===[[Noun]]===
-# 
+==English==
+===Etymology===
+Comes from the Greek word (&#957;&#943;&#954;&#951;) meaning ''[[victory]]''.
+
+===Noun===
+'''Nike'''
+
 # The Athenan Nike
 # A manufacturer that produces mostly shoe products.
