/* Translations */ +lt <the#762>

--- a/wiki/the.wikitext
+++ b/wiki/the.wikitext
@@ -102,6 +102,7 @@ Old English ''&thorn;&aelig;t'', neuter article; Middle English ''&thorn;&aelig;
 *Latin: ''not used''
 *[[Maori]]: [[te#Maori|te]] ''singular'', [[nga]] ''plural''
 *[[Lingua Franca Nova]]: [[la#Lingua Franca Nova|la]]
+*Lithuanian: ''not used''
 *Norwegian: [[-en]] ''common m'', [[-et]] ''n''; [[en#Norwegian|en]] ''common m'', [[ei#Norwegian|ei]] ''f'', [[et#Norwegian|et]] ''n''
 *Polish: ''not used''
 *Portuguese: [[o]] ''m'', [[a]] ''f'', [[os]] ''m plural'', [[as]] ''f plural''
