--- a/wiki/%E3%81%9E%E3%81%86%E3%81%92.wikitext
+++ b/wiki/%E3%81%9E%E3%81%86%E3%81%92.wikitext
@@ -1,5 +1,5 @@
-== [[Japanese]] [[Furigana]] ==                             
+== Japanese [[Furigana]] ==                             
 
-'''[[reading]]''': zōge
+'''ぞうげ''': zōge
 
-# [[象牙]]: [[ivory]], [[tusk]]
+# [[象牙]]: elephant's [[ivory]], [[tusk]]
