--- a/wiki/%E9%93%97.wikitext
+++ b/wiki/%E9%93%97.wikitext
@@ -13,14 +13,13 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#tongs, pincers
-*# dagger
-*# sword
-
+*#[[tongs]], [[pincers]]
+*# [[dagger]]
+*# [[sword]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
