--- a/wiki/%E9%94%B7.wikitext
+++ b/wiki/%E9%94%B7.wikitext
@@ -13,13 +13,12 @@
 * '''Graphical Significance and Origin''': 
 
 * '''Common Meaning'''
-*#high, lofty
-*# edge of knife
-
+*#[[high]], [[lofty]]
+*# [[edge]] of [[knife]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
