--- a/wiki/%E7%88%BA.wikitext
+++ b/wiki/%E7%88%BA.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': father, grandfather
+* '''Common Meaning''': [[father]], [[grandfather]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -35,7 +35,7 @@
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[や]] (ya)
@@ -45,9 +45,9 @@
 
 ----
 
-== [[Korean]] [[Hanja]] ==
+== Korean [[Hanja]] ==
 
-* '''[[Hangeul]]''': 야
+* '''[[Hangeul]]''': [[야]]
 
 * '''[[Eumhun]] reading''': 
 
