--- a/wiki/%E7%88%B7.wikitext
+++ b/wiki/%E7%88%B7.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': father, grandfather
+* '''Common Meaning''': [[father]], [[grandfather]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -30,6 +30,13 @@
 
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[爺]]
+
+===Compounds===
+*[[爷们]]
+*[[爷们儿]]
+*[[爷儿]]
+*[[爷儿们]]
+*[[爷爷]]
 
 * '''Other info''': 
 
