/* Translations */  Portuguese <suggest#56461>

--- a/wiki/suggest.wikitext
+++ b/wiki/suggest.wikitext
@@ -24,6 +24,7 @@
 <!--Put translations for languages from A to I here-->
 *French: [[proposer#French|proposer]], [[suggérer]]
 *Italian: [[proporre]], [[suggerire]]
+*Portuguese: [[propor]], [[sugerir]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
