fmt; improve <shinjitai#49864>

--- a/wiki/shinjitai.wikitext
+++ b/wiki/shinjitai.wikitext
@@ -1,3 +1,12 @@
 ==Japanese romaji==
 ===Noun===
-#[[新字体]]
+'''shinjitai''' ([[新字体]], しんじたい)
+
+# Form of Japanese [[kanji]] used before 1947
+
+====Antonyms====
+*[[kyūjitai]] ([[旧字体]], きゅうじたい)
+
+===See also===
+*[[fántǐzì]] ([[繁體字]], [[繁体字]])
+*[[jiǎntǐzì]] ([[簡體字]], [[简体字]])
