/* Noun */ improve def <旧字体#49786>

--- a/wiki/%E6%97%A7%E5%AD%97%E4%BD%93.wikitext
+++ b/wiki/%E6%97%A7%E5%AD%97%E4%BD%93.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''[[旧]][[字体]]''' (きゅうじたい; kyū-jitai)
 
-#old form of [[kanji]] in Japan.
+# Form of Japanese [[kanji]] used before 1947
 
 ====Antonyms====
 *[[新字体]] (しんじたい; shin-jitai)
