/* Noun */ improve def <新字体#49787>

--- a/wiki/%E6%96%B0%E5%AD%97%E4%BD%93.wikitext
+++ b/wiki/%E6%96%B0%E5%AD%97%E4%BD%93.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''[[新]][[字体]]''' (しんじたい; shin-jitai)
 
-# new, simplified form of [[kanji]] in Japan.
+# Simplified form of Japanese [[kanji]] used after 1947
 
 ====Antonyms====
 *[[旧字体]] (きゅうじたい; kyū-jitai)
