--- a/wiki/shinjitai.wikitext
+++ b/wiki/shinjitai.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''shinjitai''' ([[新字体]], しんじたい)
 
-# Form of Japanese [[kanji]] used before 1947
+# Traditional form of Japanese [[kanji]] used before 1947
 
 ====Antonyms====
 *[[kyūjitai]] ([[旧字体]], きゅうじたい)
