--- a/wiki/lieutenant.wikitext
+++ b/wiki/lieutenant.wikitext
@@ -8,12 +8,14 @@ From French ''[[lieu]]'',"place", ''[[tenant]]'', "holder".
 
 ===Noun===
 
-# The lowest rank of a commissioned army officer, junior to the rank of [[captain]].  
+# The second lowest rank of a commissioned army officer, above a [[second lieutenant]] and below a [[captain]]. Called [[first lieutenant]] (1st lieutenant) in the US Army.
 # A naval officer whose rank is above that of [[ensign]] in the United States Navy and below that of a [[lieutenant commander]].  There are two ranks of lieutenant: [[lieutenant junior grade]] and lieutenant.
 # A naval officer in the Royal Navy who holds the rank above [[sub-lieutenant]] and below [[lieutenant commander]].
 # A person who executes the plans and directives of another.
 
 ====Translations====
+*Czech: [[nadporučík]]
+*German: [[Oberleutnant]]
 *Japanese: [[中尉]], [[副官]]
 
 ===Adjective===
