--- a/wiki/lieutenant.wikitext
+++ b/wiki/lieutenant.wikitext
@@ -14,7 +14,7 @@ From French ''[[lieu]]'',"place", ''[[tenant]]'', "holder".
 # A person who executes the plans and directives of another.
 
 ====Translations====
-*Czech: [[nadporučík]]
+*Czech: [[nadporučík]] (m)
 *German: [[Oberleutnant]]
 *Japanese: [[中尉]], [[副官]]
 
