/* Noun */  corrected spelling <second lieutenant#66552>

--- a/wiki/second_lieutenant.wikitext
+++ b/wiki/second_lieutenant.wikitext
@@ -1,6 +1,6 @@
 ===Noun===
 
-# The lowest rank of a commissioned army officer, below a [[lieutenant]]. Also spelled 2nd lieutenant.
+# The lowest rank of a commissioned army officer, below a [[lieutenant]]. Also spellt 2nd lieutenant.
 
 ====Translations====
 *Czech: [[poručík]] (m)
