/* Translations */ added gender for German <lieutenant#42486>

--- a/wiki/lieutenant.wikitext
+++ b/wiki/lieutenant.wikitext
@@ -15,7 +15,7 @@ From French ''[[lieu]]'',"place", ''[[tenant]]'', "holder".
 
 ====Translations====
 *Czech: [[nadporučík]] (m)
-*German: [[Oberleutnant]]
+*German: [[Oberleutnant]] (m)
 *Japanese: [[中尉]], [[副官]]
 
 ===Adjective===
