--- a/wiki/%E5%BC%82.wikitext
+++ b/wiki/%E5%BC%82.wikitext
@@ -12,11 +12,11 @@
 
 * '''Graphical Significance and Origin''': 
 
-* '''Common Meaning''': different, unusual, strange
+* '''Common Meaning''': [[different]], [[unusual]], [[strange]]
 
 ----
 
-== [[Chinese]] [[Hanzi]] ==
+== Chinese [[Hanzi]] ==
 
 * '''Romanizations'''
 ** '''[[Mandarin]]'''
@@ -31,11 +31,57 @@
 * '''Style''': [[Simplified Chinese]] 
 ** '''[[Traditional Chinese|Traditional]] equivalent''': [[異]]
 
+===Compounds===
+*[[异邦]]
+*[[异才]]
+*[[异彩]]
+*[[异常]]
+*[[异词]]
+*[[异地]]
+*[[异动]]
+*[[异读]]
+*[[异端]]
+*[[异国]]
+*[[异乎寻常]]
+*[[异化]]
+*[[异化作用]]
+*[[异己]]
+*[[异教]]
+*[[异军突起]]
+*[[异口同声]]
+*[[异类]]
+*[[异曲同工]]
+*[[异趣]]
+*[[异人]]
+*[[异兽]]
+*[[异说]]
+*[[异体]]
+*[[异体字]]
+*[[异同]]
+*[[异途]]
+*[[异外]]
+*[[异味]]
+*[[异闻]]
+*[[异物]]
+*[[异乡]]
+*[[异香]]
+*[[异想天开]]
+*[[异心]]
+*[[异型]]
+*[[异性]]
+*[[异姓]]
+*[[异言]]
+*[[异样]]
+*[[异议]]
+*[[异域]]
+*[[异状]]
+*[[异族]]
+
 * '''Other info''': 
 
 ----
 
-== [[Japanese]] [[Kanji]] ==
+== Japanese [[Kanji]] ==
 
 * '''Readings'''
 ** '''[[On]]''': [[い]] (i)
