--- a/wiki/daisho.wikitext
+++ b/wiki/daisho.wikitext
@@ -1,1 +1,4 @@
+===Noun===
+'''daisho''' ([[大小]])
+
 #The traditional [[Japanese]] set of swords that consisted of a [[katana]] (''daitou'') and a [[wakizashi]].
