ja++; +es <tanto#8624>

--- a/wiki/tanto.wikitext
+++ b/wiki/tanto.wikitext
@@ -1,1 +1,32 @@
-#A [[Japanese]] [[dagger]].
+==Japanese [[romaji]]==
+===Noun===
+'''tanto'''<!--kanji/kana?-->
+
+#A Japanese [[dagger]].
+
+===See also===
+*[[bokken]]
+*[[boku]]
+*[[daito]]
+*[[iaito]]
+*[[katana]]
+*[[ken]]
+*[[kendo]]
+*[[kodachi]]
+*[[saya]]
+*[[shinken]]
+*[[shoto]]
+*[[tachi]]
+*[[tsurugi]]
+*[[wakizashi]]
+
+----
+
+==Spanish==
+<!-- adv or adj? -->
+'''tanto''' ([[tantos]], [[tanta]], [[tantas]])
+
+# [[plenty]], [[enough]], [[pretty]] (much)
+
+====Related terms====
+*[[tan]]<!-- or is this just a contextual variant like santo/san? -->
