--- a/wiki/tanto.wikitext
+++ b/wiki/tanto.wikitext
@@ -1,6 +1,6 @@
 ==Japanese [[romaji]]==
 ===Noun===
-'''tanto'''<!--kanji/kana?-->
+'''tanto''' ([[短刀]], たんとう)
 
 #A Japanese [[dagger]].
 
@@ -19,6 +19,15 @@
 *[[tachi]]
 *[[tsurugi]]
 *[[wakizashi]]
+
+----
+
+==Italian==
+===Adjective===
+'''tanto''' ''m'', '''[[tanta]]''' ''f''
+
+# a [[lot]] of
+# so [[much]]
 
 ----
 
