--- a/wiki/second_lieutenant.wikitext
+++ b/wiki/second_lieutenant.wikitext
@@ -1,6 +1,8 @@
+==English==
 ===Noun===
+'''[[second]] [[lieutenant]]'''
 
-# The lowest rank of a commissioned army officer, below a [[lieutenant]]. Also spellt 2nd lieutenant.
+# The lowest rank of a commissioned army officer, below a [[lieutenant]]. Also spelt 2nd lieutenant.
 
 ====Translations====
 *Czech: [[poručík]] (m)
