--- a/wiki/%E9%8B%8F.wikitext
+++ b/wiki/%E9%8B%8F.wikitext
@@ -44,6 +44,11 @@
 ** '''[[On]]''': [[きょう]] (kyō)
 ** '''[[Kun]]''': [[つるぎ]] (tsurugi), [[つか]] (tsuka), [[はさみ]] (hasami)
 
+===Noun===
+はさみ
+
+# [[scissors]]
+
 * '''Other info''':  
 
 ----
