/* See also */ <tanto#8624>

--- a/wiki/tanto.wikitext
+++ b/wiki/tanto.wikitext
@@ -5,20 +5,20 @@
 #A Japanese [[dagger]].
 
 ===See also===
-*[[bokken]]
+*[[bokken]] ([[木剣]], [[木劍]], ぼっけん)
 *[[boku]]
 *[[daito]]
 *[[iaito]]
-*[[katana]]
-*[[ken]]
+*[[katana]] ([[刀]], かたな)
+*[[ken]] ([[剣]], [[劍]], けん)
 *[[kendo]]
 *[[kodachi]]
-*[[saya]]
+*[[saya]] ([[鞘]], [[さや]])
 *[[shinken]]
 *[[shoto]]
 *[[tachi]]
-*[[tsurugi]]
-*[[wakizashi]]
+*[[tsurugi]] ([[剣]], [[劍]], つるぎ)
+*[[wakizashi]] ([[脇差]])
 
 ----
 
