+english & japanese entries; <ken#40161>

--- a/wiki/ken.wikitext
+++ b/wiki/ken.wikitext
@@ -1,7 +1,49 @@
+==English==
+===Proper noun===
+'''Ken'''
+
+# A male given name
+
+====Related terms====
+*[[kenneth]]
+*[[kenny]]
+
+----
+
+==German==
 ===Verb===
 '''ken'''
 
-# first person singular present tense of [[kennen]]
+# first person singular present tense of [[kennen]], ''to [[know]]''
 
 ====Translations====
 *English: [[know]]
+
+----
+
+==Japanese [[romaji]]==
+===Noun===
+'''ken''' ([[剣]], [[劍]], けん)
+
+# (''obsolete'') straight [[sword]]
+#:Note: "ken" is now mostly seen in compounds
+<!-- how should we show that ken is one reading of 剣/劍, and that tsurugi is its other reading? -->
+
+====Derived terms====
+*[[bokken]] ([[木剣]], [[木劍]], ぼっけん)
+*[[kendo]]
+*[[shinken]]
+
+===See also===
+*[[boku]]
+*[[daito]]
+*[[iaito]]
+*[[katana]] ([[刀]], かたな)
+*[[kodachi]]
+*[[saya]] ([[鞘]], [[さや]])
+*[[shoto]]
+*[[tachi]]
+*[[tanto]] ([[短刀]], たんとう)
+*[[tsurugi]] ([[剣]], [[劍]], つるぎ)
+*[[wakizashi]] ([[脇差]])
+<!-- sources: http://www.aikiweb.com/forums/archive/index.php/t-1870.html -->
