--- a/wiki/ky%C5%ABjitai.wikitext
+++ b/wiki/ky%C5%ABjitai.wikitext
@@ -2,7 +2,7 @@
 ===Noun===
 '''kyūjitai''' ([[旧字体]], きゅうじたい)
 
-# Simplified form of Japanese [[kanji]] used after 1947
+# Traditional form of Japanese kanji used before 1947 
 
 ====Antonyms====
 *[[shinjitai]] ([[新字体]], しんじたい)
