ja: +kyujitai & see also <bokken#51584>

--- a/wiki/bokken.wikitext
+++ b/wiki/bokken.wikitext
@@ -12,8 +12,24 @@ From Japanese [[木剣]] (ぼっけん, bokken), ''wooden sword''.
 ===Synonyms===
 *[[bokuto]]
 
-==Japanese Romaji==
+==Japanese [[romaji]]==
 ===Noun===
-'''bokken''' ([[木剣]], ぼっけん)
+'''bokken''' ([[木剣]], [[木劍]], ぼっけん)
 
-#a wooden sword
+#a wooden [[sword]]
+
+===See also===
+*[[boku]]
+*[[daito]]
+*[[iaito]]
+*[[katana]] ([[刀]], かたな)
+*[[ken]] ([[剣]], [[劍]], けん)
+*[[kendo]]
+*[[kodachi]]
+*[[saya]] ([[鞘]], [[さや]])
+*[[shinken]]
+*[[shoto]]
+*[[tachi]]
+*[[tanto]] ([[短刀]], たんとう)
+*[[tsurugi]] ([[剣]], [[劍]], つるぎ)
+*[[wakizashi]] ([[脇差]])
