--- a/wiki/worm.wikitext
+++ b/wiki/worm.wikitext
@@ -39,7 +39,7 @@
 *Indonesian: [[cacing]]
 *Italian: [[verme]] ''m''
 *Japanese: [[虫]] ([[むし]], mushí), [[虫螻]] ([[むしけら]], mushikera)
-*Korean: [[벌레]] (peolre)
+*Korean: [[벌레]] (beolle)
 *Latin: [[vermis]] ''m''
 *Lithuanian: [[kirmėlė]] ''f''; [[kirminas]] ''m'' (also means insect larvae)
 *Polish: [[robak]] ''m''
@@ -63,7 +63,7 @@
 *Hebrew: [[נבזה]] (nivzeh) ''m''
 *German: [[elender]] ''m'', [[elendes Wurm]]  ''n''
 *Italian: [[miserabile]] ''m and f''
-*Korean: [[비열한 인간]] (piyeolhan ingan)
+*Korean: [[비열한 인간]] (biyeolhan ingan)
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
