ja -> tantō <tanto#8624>

--- a/wiki/tanto.wikitext
+++ b/wiki/tanto.wikitext
@@ -7,30 +7,6 @@
 
 ----
 
-==Japanese [[romaji]]==
-===Noun===
-'''tanto''' ([[短刀]], たんとう)
-
-#A Japanese [[dagger]].
-
-===See also===
-*[[bokken]] ([[木剣]], [[木劍]], ぼっけん)
-*[[boku]]
-*[[daito]]
-*[[iaito]]
-*[[katana]] ([[刀]], かたな)
-*[[ken]] ([[剣]], [[劍]], けん)
-*[[kendo]]
-*[[kodachi]]
-*[[saya]] ([[鞘]], [[さや]])
-*[[shinken]]
-*[[shoto]]
-*[[tachi]]
-*[[tsurugi]] ([[剣]], [[劍]], つるぎ)
-*[[wakizashi]] ([[脇差]])
-
-----
-
 ==Spanish==
 <!-- adv or adj? -->
 '''tanto''' ([[tantos]], [[tanta]], [[tantas]])
@@ -39,3 +15,8 @@
 
 ====Related terms====
 *[[tan]]<!-- or is this just a contextual variant like santo/san? -->
+
+----
+
+===See also===
+*[[tantō]]
