--- a/wiki/he.wikitext
+++ b/wiki/he.wikitext
@@ -20,7 +20,7 @@ The third person singular, masculine, nominative case. (''Accusative'': [[him]],
 #:'''Note:''' ''This usage is considered [[sexist]] by some.  Compare'' '''[[he/she]]''', '''[[s/he]]''' ''and'' '''[[they]]'''.
 
 ====Translations====
-*Arabic: [[هُوَ]] (húwa)
+*Arabic: [[هو|هُوَ]] (húwa)
 *Bulgarian: [[той]] (toj)
 *Chinese: [[他]] (tā)
 *Dutch: [[hij]]
@@ -44,9 +44,9 @@ The third person singular, masculine, nominative case. (''Accusative'': [[him]],
 *:'''Note:''' ''Usually omitted, except for emphasis or to avoid confusion.''
 *Japanese: [[彼]] ([[かれ]], káre)
 *Norwegian: [[han]]
-*Portuguese: [[ele]]
 *[[Persian]]: [[او]] (u) (''both male and female'')
 *Polish: [[on]]
+*Portuguese: [[ele]]
 *[[Quechua]]: [[pay#Quechua|pay]] (''both male and female'')
 *Romanian: [[el]]
 *Russian: [[он]] (on)
@@ -61,6 +61,7 @@ The third person singular, masculine, nominative case. (''Accusative'': [[him]],
 *[[!Xũ]]: [[ha#!Xũ|ha]] (''both male and female'')
 *[[Yoruba]]: [[ó]], [[á]] (''both male and female'')
 ----
+
 ===Pronunciation===
 * [[w:IPA|IPA]]: /heɪ:/
 * [[w:SAMPA|SAMPA]]: /he:/
