--- a/wiki/right.wikitext
+++ b/wiki/right.wikitext
@@ -26,7 +26,7 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Arabic: [[يمين]] (yamín)
+*Arabic: [[يمين|يَمِين]] (yamín)
 *Bulgarian: [[десен]] / [[дясна]] / [[дясно]] (desen/djasna/djasno) ''m/f/n''
 *Czech: [[pravý]] / [[pravá]] / [[pravé]] ''m/f/n''
 *Dutch: [[rechts]], [[rechtse]]
