--- a/wiki/left.wikitext
+++ b/wiki/left.wikitext
@@ -4,7 +4,7 @@
 
 === Adjective ===
 '''left'''
-# Arbitrary convention to call one direction, one side, as opposed to [[right]]. This [[arrow]] points to the left: &larr;, <--
+# Arbitrary convention to call one direction, one side, as opposed to [[right]]. This [[arrow]] points to the left: &larr;
 # Remaining
 
 ==== Translations ====
@@ -20,8 +20,8 @@
 *Indonesian: [[kiri]] (1)
 *Italian: [[sinistro]] (1)
 *Japanese: [[左]] ([[ひだり]], hidarí) (1); [[残って]] ([[のこって]], nokótte) (2)
-*Portuguese: [[esquerda]] (1); [[deixado]] ''m'' (2), [[deixada]] ''f'' (2)
 *Polish: [[lewy]] / [[lewa]] / [[lewe]] ''m/f/n'' (1)
+*Portuguese: [[esquerda]] (1); [[deixado]] ''m'' (2), [[deixada]] ''f'' (2)
 *Romanian: [[stânga]] ''f'' (1); [[rămas]] (2)
 *Russian: [[левый]] / [[левая]] / [[левое]] (lévyj/lévaja/lévoje) ''m/f/n'' (1); [[оставаться]] / [[остаться]] (ostavát'sja/ostát'sja) (2)
 *Spanish: [[izquierda]] (1); [[dejado]] (2)
