--- a/wiki/with.wikitext
+++ b/wiki/with.wikitext
@@ -13,15 +13,15 @@
 *Czech: [[s]]
 *[[Dutch]]: [[met]] (1,2), [[bij]] (1)
 *[[Esperanto]]: [[kun]]
-*Finnish: [[kanssa]], [[kera]] (1,2); [[luona]] (1); [[-ineen]] ''(comitative case)'' (1,2); [[apu|avulla]], [[-lla]] / [[-llä]] ''(adessive case)'' (4); [[-in]] ''(instructive case)'' (4)
+*Finnish: [[kanssa]], [[kera]] (1,2); [[luona]] (1); [[-ineen]] ''([[comitative case]])'' (1,2); [[apu|avulla]], [[-lla]] / [[-llä]] ''([[adessive case]])'' (4); [[-in]] ''([[instructive case]])'' (4)
 *[[French]]: [[avec]] (1,2), [[chez]] (1)
 *[[German]]: [[mit]], [[bei]]
 *[[Guaraní]]: [[ndive]], [[ndie]], [[ndi]] (1)
-*Hungarian: [[-val]] / [[-al]] ''(instrumental case)'', [[-vel]] / [[-el]] ''(instrumental case)'' (1,2,4); [[vel-]] ''+ possessive suffix'' (1); [[nál-]] ''+ possessive suffix'' (1)
+*Hungarian: [[-val]] / [[-al]] ''([[instrumental case]])'', [[-vel]] / [[-el]] ''(instrumental case)'' (1,2,4); [[vel-]] ''+ possessive suffix'' (1); [[nál-]] ''+ possessive suffix'' (1)
 *[[Icelandic]]: [[með]]
 *[[Interlingua]]: [[con]] (1,2,3)
 *Italian: [[con]]
-*Japanese: [[と]] (to), [[一緒に]] ([[いっしょに]], issho ni), [[と一緒に]] ([[といっしょに]], to issho ni), [[とともに]] (to tomoni) (1,2); [[で]] (de) (4)
+*Japanese: [[と]] (to), [[一緒に]] ([[いっしょに]], isshó ni), [[と一緒に]] ([[といっしょに]], to isshó ni), [[とともに]] (to tomóni) (1,2); [[で]] (de) (4)
 *[[Polish]]: [[z]] (1,2)
 *[[Portuguese]]: [[com]] (1,2,3,4)
 *[[Romanian]]: [[cu]] (1,2) [[alături]] (3)
