--- a/wiki/because.wikitext
+++ b/wiki/because.wikitext
@@ -7,7 +7,7 @@
 * [[For]] (''note'' : this word, contrary to because, has several meanings) 
 
 ====Translations====
-*Arabic: [[بسبب]] (bi-sábab)
+*Arabic: [[بسبب|بِسَبَب]] (bi-sábab)
 *[[Breton]]: [[peogwir]], [[abalamour]] ma, en [[abeg]] ma, [[rak]] ma
 *Bulgarian: [[защото]] (zaštoto), [[тъй като]] (täj kato), [[понеже]] (poneže)
 *[[Catalan]]: [[perquè]], [[ja que]], [[car]], [[puix]], [[puix que]]
@@ -20,7 +20,8 @@
 *[[Frisian]]: [[meidat]], [[omdat]]
 *German: [[weil]], [[denn]], [[da]]
 *Greek (Ancient): [[διότι]] (dióti)
-*Hebrew: [[לכן]]
+*Hebrew: [[לכן]] (lakhén)
+*Hungarian: [[mert]]
 *Icelandic: [[vegna þess]]
 *Indonesian: [[karena]], [[sebab]]
 *Italian: [[perché]]
