--- a/wiki/bark.wikitext
+++ b/wiki/bark.wikitext
@@ -57,7 +57,7 @@ Akin to Danish & Swedish ''bark'', Icelandic ''b&ouml;rkr'', LG. & HG. ''borke''
 *Bulgarian: [[обелвам кора на]] (obelvam kora na) (1)
 *Danish [[afbarke]] (1); [[skrubbe]] (2); [[tække]] (4)
 *German: [[abrinden]]
-*Japanese: [[樹皮を剥ぐ]] ([[じゅひをはぐ]], juhi o hagu) (1)
+*Japanese: [[樹皮を剥ぐ]] ([[じゅひをはぐ]], juhi o hágu) (1)
 *Russian: [[окоривать]] (okorivát'), [[окорять]] (okorját')
 *Spanish: [[descortezar]]
 *Swedish: [[barka]] (1)
