/* See also */ <tantō#66555>

--- a/wiki/tant%C5%8D.wikitext
+++ b/wiki/tant%C5%8D.wikitext
@@ -7,16 +7,16 @@
 ===See also===
 *[[bokken]] ([[木剣]], [[木劍]], ぼっけん)
 *[[boku]]
-*[[daito]]
-*[[iaito]]
+*[[daito]] (大刀)
+*[[iaito]] ([[居合刀]])
 *[[katana]] ([[刀]], かたな)
 *[[ken]] ([[剣]], [[劍]], けん)
-*[[kendo]]
-*[[kodachi]]
+*[[kendo]] ([[剣道]])
+*[[kodachi]] ([[小太刀]], こだち)
 *[[saya]] ([[鞘]], [[さや]])
-*[[shinken]]
-*[[shoto]]
-*[[tachi]]
+*[[shinken]] ([[真剣]])
+*[[shoto]] ([[小刀]], しょうとう)
+*[[tachi]] ([[太刀]], たち)
 *[[tsurugi]] ([[剣]], [[劍]], つるぎ)
 *[[wakizashi]] ([[脇差]])
 
