--- a/wiki/leaf.wikitext
+++ b/wiki/leaf.wikitext
@@ -26,7 +26,7 @@ flat character
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Bulgarian: [[лист]] (list)
+*Bulgarian: [[лист]] (list) ''m''
 *Chinese character: [[葉]] (yè)
 *Chinese: [[叶]] (yè), [[叶子]] (yèzi)
 *[[Chumash]] (Inezeño): [[qap]]
@@ -35,7 +35,7 @@ flat character
 *Finnish: [[lehti]]
 *French: [[feuille]] ''f''
 *German: [[Blatt]] ''n''
-*Hebrew: [[עלה]] (A'le) ''m''
+*Hebrew: [[עלה]] (a'le) ''m''
 *Hungarian: [[levél]], [[falevél]]
 |}
 | width=1% |
@@ -45,8 +45,8 @@ flat character
 *Italian: [[foglia]] ''f''
 *Japanese: [[葉]] ([[は]], ha), [[葉っぱ]] ([[はっぱ]], happá)
 *Polish: [[liść]]
-*Portuguese: [[folha]]
-*Russian: [[лист]] (list)
+*Portuguese: [[folha]] ''f''
+*Russian: [[лист]] (list) ''m''
 *Slovene: [[list#Slovene|list]] ''m''
 *Spanish: [[hoja]] ''f''
 *Swedish: [[löv]] ''n'', [[blad]] ''n''
@@ -71,7 +71,7 @@ flat character
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Bulgarian: [[лист]] (list)
+*Bulgarian: [[лист]] (list) ''m''
 *Czech: [[list]] ''m''
 *Finnish: [[lehti]], [[sivu]]
 *German: [[Blatt]] ''n''
@@ -81,10 +81,10 @@ flat character
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Japanese: [[一枚]] ([[いちまい]], ichimaí)
-*Polish: [[liść]]
-*Portuguese: [[folha]]
-*Russian: [[лист]] (list)
+*Japanese: [[一枚]] ([[いちまい]], ichí-maí)
+*Polish: [[liść]] ''m''
+*Portuguese: [[folha]] ''f''
+*Russian: [[лист]] (list) ''m''
 *Slovene: [[list#Slovene|list]] ''m''
 *Spanish: [[hoja]] ''f''
 |}
@@ -99,8 +99,8 @@ flat character
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
 *German: [[Platte]] ''f''
-*Portuguese: [[aba]]
-*Spanish: [[tablero]]
+*Portuguese: [[aba]] ''f''
+*Spanish: [[tablero]] ''m''
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
@@ -108,7 +108,7 @@ flat character
 |}
 |}
 
-The translations below might be out of synch with the definitions above.  Would native speakers check these and insert them in the appropriate table(s) above, removing the numbers.
+The translations below might be out of synch with the definitions above. Would native speakers check these and insert them in the appropriate tables above, removing the numbers?
 *Dutch: [[blad]] ''n'' (2,3)
 *Swedish: [[löv]] ''n'' (2), [[blad]] ''n'' (2,3)
 *Tagalog: [[dahon]]
