--- a/wiki/leaf.wikitext
+++ b/wiki/leaf.wikitext
@@ -46,7 +46,7 @@ flat character
 *Japanese: [[葉]] ([[は]], ha), [[葉っぱ]] ([[はっぱ]], happá)
 *Polish: [[liść]]
 *Portuguese: [[folha]] ''f''
-*Russian: [[лист]] (list) ''m''
+*Russian: [[лист]] (list) ''m'', [[листья]] (líst'ja) ''pl''
 *Slovene: [[list#Slovene|list]] ''m''
 *Spanish: [[hoja]] ''f''
 *Swedish: [[löv]] ''n'', [[blad]] ''n''
@@ -84,7 +84,7 @@ flat character
 *Japanese: [[一枚]] ([[いちまい]], ichí-maí)
 *Polish: [[liść]] ''m''
 *Portuguese: [[folha]] ''f''
-*Russian: [[лист]] (list) ''m''
+*Russian: [[лист]] (list) ''m'', [[листы]] (listý) ''pl''
 *Slovene: [[list#Slovene|list]] ''m''
 *Spanish: [[hoja]] ''f''
 |}
