--- a/wiki/water.wikitext
+++ b/wiki/water.wikitext
@@ -100,6 +100,7 @@ From Middle English, from Old English [[wæter]]. Cognates include [[wet]], Gree
 *Swahili: [[maji]]
 *Swedish: [[vatten]] 
 *[[Tagalog]]: [[tubig]]
+*[[Tok Pisin]]: [[wara]]
 *[[Tupinambá]]: [['y]]
 *Turkish: [[su]]
 *[[Tzotzil]]: [[voʻ]]
