/* Translations */ corrected Hebrew spelling--never saw it spelled that way <water#3749998>

--- a/wiki/water.wikitext
+++ b/wiki/water.wikitext
@@ -60,7 +60,7 @@ From Middle English, from Old English [[wæter]]. Cognates include [[wet]], Gree
 *Greek, Modern: [[νερό]] (ner&oacute;) ''n''
 *[[Guarani]]: [[y]]
 *[[Hawaiian]]: [[wai]]
-*Hebrew: [[מיים]] (mayim) ''m,plural'' 
+*Hebrew: [[מים]] (mayim) ''m,plural'' 
 *[[Hindi]]: [[पानी]] (paanii)
 *Hungarian: [[víz]]
 *Icelandic: [[vatn]]
