--- a/wiki/water.wikitext
+++ b/wiki/water.wikitext
@@ -119,6 +119,7 @@ From Middle English, from Old English [[wæter]]. Cognates include [[wet]], Gree
 {|
 <!--languages from A to I go here-->
 *Finnish: [[vesi]], [[mineraalivesi]]
+*Hebrew: [[מים מינרלים]]
 |}
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
