--- a/wiki/because.wikitext
+++ b/wiki/because.wikitext
@@ -20,7 +20,7 @@
 *[[Frisian]]: [[meidat]], [[omdat]]
 *German: [[weil]], [[denn]], [[da]]
 *Greek (Ancient): [[διότι]] (dióti)
-*Hebrew: [[לכן]] (lakhén)
+*Hebrew: [[כי]] (ki); [[בגלל]] (biglal)
 *Hungarian: [[mert]]
 *Icelandic: [[vegna þess]]
 *Indonesian: [[karena]], [[sebab]]
