--- a/wiki/seed.wikitext
+++ b/wiki/seed.wikitext
@@ -16,8 +16,8 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Bulgarian: [[семе]] (seme)
-*Czech: [[semeno]]
+*Bulgarian: [[семе]] (seme) ''n''
+*Czech: [[semeno]] ''n''
 *Dutch: [[zaad]]
 *Finnish: [[siemen]]
 *French: [[graine]] ''f''
@@ -29,13 +29,13 @@
 | width=1% |
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Latin: [[semen]]
-*[[Persian]]: [[تُخم]] (toxm)
-*Polish: [[nasienie]], [[nasionko]]
+*Latin: [[semen]] ''n''
+*[[Persian]]: [[تخم|تُخم]] (toxm)
+*Polish: [[nasienie]] ''n'', [[nasionko]] ''n''
 *Portuguese: [[semente]] ''f''
 *Russian: [[семя]] (sémja) ''n'', [[семена]] (semená) ''pl''
 *[[Slovene]]: [[seme]] ''n''
-*Spanish:  [[semilla]]
+*Spanish:  [[semilla]] ''f''
 *Swedish: [[frö]] ''n''
 |}
 |}
