--- a/wiki/with.wikitext
+++ b/wiki/with.wikitext
@@ -17,6 +17,7 @@
 *French: [[avec]] (1,2), [[chez]] (1)
 *German: [[mit]], [[bei]]
 *[[Guaraní]]: [[ndive]], [[ndie]], [[ndi]] (1)
+*[[Hebrew]]: [[עם]] ('im)
 *Hungarian: [[-val]] / [[-al]] ''([[instrumental case]])'', [[-vel]] / [[-el]] ''(instrumental case)'' (1,2,4); [[vel-]] ''+ possessive suffix'' (1); [[nál-]] ''+ possessive suffix'' (1)
 *Icelandic: [[með]]
 *[[Interlingua]]: [[con]] (1,2,3)
