--- a/wiki/worthwhile.wikitext
+++ b/wiki/worthwhile.wikitext
@@ -12,3 +12,6 @@
 *[[Norwegian]]: [[umaken verd]]
 *[[Portuguese]]: [[vantajoso]]
 *[[Spanish]]: [[de valor]], que ''vale'' la ''pena''
+
+===Related terms===
+* [[worth one's while]]
