--- a/wiki/forest.wikitext
+++ b/wiki/forest.wikitext
@@ -19,18 +19,18 @@
 *Finnish: [[metsä]] (1)
 *French: [[forêt]] ''f''
 *German: [[Wald]] ''m''
-*Hebrew: [[יער]]
+*Hebrew: [[יער]] (ya'ar) ''m''
 *Hungarian: [[erdő]], [[erdőség]]
 *Interlingua: [[foreste]]
 *Italian: [[foresta]] ''f''
 *Japanese: [[森]] ([[もり]], morí), [[森林]] ([[しんりん]], shinrín)
 *Latin: [[silva]] ''f''
-*Polish: [[las]]
+*Polish: [[las]] ''m''
 *Portuguese: [[floresta]] ''f''
 *Romanian: [[pădure]] ''f''
-*Russian: [[лес]] (les)
-*Slovak: [[les]]  ''m'', [[hora]] ''f''
-*Slovene: [[gozd]] ''m'' (1,2), [[les]] ''m'' (1 liter.)
+*Russian: [[лес]] (les) ''m'', [[леса]] (lesá) ''pl''
+*Slovak: [[les]] ''m'', [[hora]] ''f''
+*Slovene: [[gozd]] ''m'' (1,2), [[les]] ''m'' (1, literary)
 *Spanish: [[bosque]] ''m'', [[foresta]] ''f''
 *Swedish: [[skog]]
 
