--- a/wiki/forest.wikitext
+++ b/wiki/forest.wikitext
@@ -11,7 +11,7 @@
 
 ====Translations====
 *Bulgarian: [[гора]] (gora) ''f''
-*Catalan: [[bosc]] ''m'', forest ''f''
+*Catalan: [[bosc]] ''m'', [[forest#Catalan|forest]] ''f''
 *Chinese: [[森林]] (sēnlín)<!--, [[御猎场]]-->
 *Czech: [[les]]  ''m''
 *Dutch: [[woud]] ''n''
@@ -29,7 +29,7 @@
 *Portuguese: [[floresta]] ''f''
 *Romanian: [[pădure]] ''f''
 *Russian: [[лес]] (les) ''m'', [[леса]] (lesá) ''pl''
-*Slovak: [[les]] ''m'', [[hora]] ''f''
+*Slovak: [[les]] ''m'', [[hora#Slovak|hora]] ''f''
 *Slovene: [[gozd]] ''m'' (1,2), [[les]] ''m'' (1, literary)
 *Spanish: [[bosque]] ''m'', [[foresta]] ''f''
 *Swedish: [[skog]]
