--- a/wiki/snake.wikitext
+++ b/wiki/snake.wikitext
@@ -17,21 +17,21 @@
 |-
 |bgcolor="#FFFFE0" valign=top width=48%|
 {|
-*Arabic: [[ثّعبان]] (thoaabá:n)
+*Arabic: [[ثعبان|ثُعْبَان]] (thoaʕbáːn) ''m'', [[ثعابين|ثَعَابِينُ]] (thaʕaːbíːn) ''pl''
 *[[Bosnian]]: [[zmija]] ''f''
 *[[Breton]]: [[naer]] ''f'' -ed ''pl'', [[sarpant]] ''m'' -ed ''pl''
-*Bulgarian: [[змия]] (zmija)
+*Bulgarian: [[змия]] (zmija) ''f''
 *[[Catalan]]: [[serp]] ''f'', [[serpent]] ''f''
 *Chinese Characters: [[蛇]]
 *Chinese: [[蛇]] (shé)
-*Czech: [[had#Czech|had]]
+*Czech: [[had#Czech|had]] ''m''
 *Danish: [[slange]]
 *Dutch: [[slang]] ''f'', [[serpent]] ''n''
 *Finnish: [[käärme]]
 *French: [[serpent]] ''m''
 *German: [[Schlange]] ''f''
-*Greek, Ancient: [[ὄφις]] (óphis), [[ἑρπετόν]] (herpetón)
-*Hebrew: [[נחש]] ''m''
+*Greek, Ancient: [[ὄφις]] (óphis)'''m'', [[ἑρπετόν]] (herpetón) ''n''
+*Hebrew: [[נחש]] (nakhaš) ''m''
 *Hungarian: [[kígyó]]
 *Indonesian: [[ular]]
 *Italian: [[serpente]] ''m''
@@ -49,7 +49,7 @@
 *Polish: [[wąż]] ''m''
 *Portuguese: [[serpente]] ''f''
 *Romanian: [[şarpe]] ''m''
-*Russian: [[змея]] (zmejá)
+*Russian: [[змея]] (zmejá) ''f'', [[змеи]] (zméi) ''pl''
 *Slovak: [[had#Slovak|had]] ''m''
 *Slovene: [[kača]] ''f''
 *Spanish: [[serpiente]] ''f''
