--- a/wiki/Kiev.wikitext
+++ b/wiki/Kiev.wikitext
@@ -2,6 +2,10 @@
 
 #The capital of [[Ukraine]]
 
+=== Alternate Spelling ===
+*[[Kyiv]]
+*[[Kyyiv]]
+
 ===Translations===
 *Chinese: [[基辅]]
 *French: Kiev
