--- a/wiki/snake.wikitext
+++ b/wiki/snake.wikitext
@@ -30,7 +30,7 @@
 *Finnish: [[käärme]]
 *French: [[serpent]] ''m''
 *German: [[Schlange]] ''f''
-*Greek, Ancient: [[ὄφις]] (óphis)'''m'', [[ἑρπετόν]] (herpetón) ''n''
+*Greek (Ancient): [[ὄφις]] (óphis) ''m'', [[ἑρπετόν]] (herpetón) ''n''
 *Hebrew: [[נחש]] (nakhaš) ''m''
 *Hungarian: [[kígyó]]
 *Indonesian: [[ular]]
